# fowoo

./: .gitignore  Cargo.toml  README.md  compose.yml  default.env
.github/workflows/: build-migrations.yml  build-postgres.yml  build-rust.yml  ci.yml
docker/rust/: Dockerfile
docker/sqlx-cli/: Dockerfile
migrations/: 20240201_users.sql  20240205200032_user-and-first-wallet.sql
src/: controller.rs  infra.rs  lib.rs  main.rs
src/controller/: auth.rs  home.rs  login.rs
src/infra/: auth.rs  http.rs  state.rs
src/infra/auth/: google.rs
statics/css/: fowoo.css
templates/: layout.html
templates/home/: index.html
templates/login/: index.html
tests/: fowoo.rs
tests/feature/: auth.feature
tests/features/: homepage.feature  login.feature
