[package]
name = "fowoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tera = "1.19.1"

[dev-dependencies]
cucumber = "0.20.2"

[[test]]
name = "fowoo"
harness = false
